--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ postgres = { path = "../rust-postgres/postgres" }
 wkb = { path = "../rust-wkb" }
 geo = { git = "file:///home/rory/code/rust/rust-geo", branch = "rory-everything" }
 clap = "2"
+serde_json = "1"
+
