--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ geo = { git = "file:///home/rory/code/rust/rust-geo", branch = "rory-everything"
 clap = "2"
 serde_json = "1"
 
+[profile.release]
+debug=true
