--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ geo = { git = "file:///home/rory/code/rust/rust-geo", branch = "rory-everything"
 clap = "2"
 serde_json = "1"
 users = "0.6.0"
+num-traits = "0.1"
 
 [profile.release]
 debug=true
