--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ clap = "2"
 serde_json = "1"
 users = "0.6.0"
 num-traits = "0.1"
+md5 = "0.3.6"
+rusqlite = "0.13.0"
 
 [profile.release]
 debug=true
