--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.5.0"
 authors = ["Rory McCann <rory@technomancy.org>"]
 
 [dependencies]
-mapbox_vector_tile = { path = "../mapbox_vector_tile/" }
+mapbox_vector_tile = { git = "https://github.com/rory/rust-mapbox-vector-tile" }
 yaml-rust = "0.3"
-slippy-map-tiles = "0.13"
+slippy-map-tiles = "0.14"
 postgres = "0.15.2"
 wkb = { git = "https://github.com/rory/rust-wkb.git", tag = "v0.2.0" }
 geo = { git = "https://github.com/rory/rust-geo.git", branch = "rory-everything" }
