chore: clean up dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ mapbox_vector_tile = { git = "https://github.com/rory/rust-mapbox-vector-tile" }
 yaml-rust = "0.3"
 slippy-map-tiles = "0.14"
 postgres = "0.15.2"
-wkb = { git = "https://github.com/rory/rust-wkb.git", tag = "v0.2.0" }
-geo = { git = "https://github.com/rory/rust-geo.git", branch = "rory-everything" }
+wkb = "0.2.0"
+geo = "0.7.1"
 clap = "2"
 serde_json = "1"
 users = "0.6.0"
@@ -21,3 +21,6 @@ separator = "0.3.1"
 
 [profile.release]
 debug=true
+
+[patch.crates-io]
+geo = { git = "https://github.com/rory/rust-geo.git", branch = "rory-everything" }
