--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ md5 = "0.3.6"
 rusqlite = "0.13.0"
 byteorder = "1.2.1"
 separator = "0.3.1"
+log = "0.4.0"
+env_logger = "0.5.6"
+
 
 [profile.release]
 debug=true
