--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ log = "0.4.1"
 env_logger = "0.5.6"
 procinfo = "0.4.2"
 failure = "0.1.2"
+toml = "0.4"
+serde_derive = "1.0"
+serde = "1.0"
 
 [profile.release]
 debug=true
